--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -13,7 +13,8 @@ CARE included an additional arm of treatment. In addition to the services listed
 \begin{threeparttable}
 	\input{output/program-desc-abc-care}
 \begin{tablenotes}
-\item Note: Characteristics that do not specify ABC or CARE were present in both. Biologically healthy includes lack of serious illness, including mental retardation.
+\footnotesize
+\item Note: Characteristics that do not specify ABC or CARE were present in both. Biologically healthy includes lack of serious illness, including mental retardation. \\
 \item Sources: \citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Smith_1977_AJMD,Ramey_etal_1985_Project-CARE_TiECSE,Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}.
 \end{tablenotes}
 \end{threeparttable}
@@ -28,7 +29,7 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables between experime
 \begin{threeparttable}
 	\input{output/abccare-baseline}
 \begin{tablenotes}
-\footnotesize
+\footnotesize 
 \item Note: The variables in this table are all measured at the baseline age, close to when the children were born. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
 \end{tablenotes}
 \end{threeparttable}
@@ -37,13 +38,13 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables between experime
 Figure~\ref{fig:family-over-time} complements Table~\ref{tab:abccare-baseline} by showing the evolution of the family characteristics during and after treatment, by gender. Conditional on the father being present at baseline, the his presence is fairly constant through age 8. The females in the treatment group have fewer present father than all the other groups.
 
 \begin{figure}[H]
-\textbf{[JJH: Father Present?]}
+\textbf{[JJH: Father Present?][Yes. Title is now changed.]}
 \begin{center}
 \caption{Family Characteristics Over Time}
 \label{fig:family-over-time}
 	\begin{subfigure}[b]{0.49\textwidth}
 		\centering
-		\caption{Father's Presence}
+		\caption{Father Present}
 		\label{fig:fhome}
 			\includegraphics[width=\textwidth]{output/family-fhome}
 	\end{subfigure}
@@ -54,7 +55,7 @@ Figure~\ref{fig:family-over-time} complements Table~\ref{tab:abccare-baseline} b
 			\includegraphics[width=\textwidth]{output/family-hhsibs}
 	\end{subfigure}
 \end{center}
-\raggedright
+\footnotesize \justify
 Note: These plots describe the family and preschool characteristics in the data. The bars in Plot (a) after baseline are conditional on the father being at home at baseline. The bars represent the proportion of father's presence. The bars in Plot (b) represent the mean number of siblings by group.
 \end{figure}
 
@@ -101,6 +102,7 @@ Data across a wide range of outcomes were collected for ABC and CARE at similar 
 \footnotesize
 	\input{output/abc-care-variables}
 \begin{tablenotes}
+\footnotesize 
 \item Note: This table provides an abbreviated summary of the variables available in ABC and CARE. The cognitive and social-emotional categories listed are a subset of the full list of measured skills. Ages followed by m.\ are in months. All other ages are in years. Ages with an asterisk (*) are only present in ABC.
 %See Appendix~\ref{} for more information on the available measures of skills.
 \end{tablenotes}
