--- a/output/abccare-var-tables.tex
+++ b/output/abccare-var-tables.tex
@@ -70,7 +70,7 @@
 \author{Ruby Zhang}
 \maketitle
 
-\section{Variable Measures}
+\section{Variable Measures (10 bootstraps)}
 
   \subsection{Cognitive Skills}
   \input{abccare-var-iq}
@@ -88,7 +88,7 @@
 
 \section{Factor Measures}
 
-  \subsection{Old Factors}
+  \subsection{Old Factors (10 bootstraps)}
 
     \subsubsection{Cognitive Skills}
     \input{abccare-old-fac-cog}
@@ -102,17 +102,17 @@
     \subsubsection{Parenting Skills}
     \input{abccare-old-fac-parenting}
 
-  \subsection{New Factors}
+  \subsection{New Factors (50 bootstraps)}
     \subsubsection{Cognitive Skills}
-    %\input{abccare-new-fac-cog}
+    \input{abccare-new-fac-cog}
 
     \subsubsection{Achievement Skills}
-    %\input{abccare-new-fac-ach}
+    \input{abccare-new-fac-ach}
 
     \subsubsection{Non-Cognitive Skills}
-    %\input{abccare-new-fac-ncog}
+    \input{abccare-new-fac-ncog}
 
     \subsubsection{Parenting Skills}
-    %\input{abccare-new-fac-parenting}
+    \input{abccare-new-fac-parenting}
 
 \end{document}
