edits from heckman 4/28

--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,6 +1,1 @@
-\noindent This paper estimates gender differences in the long-term benefits of a widely implemented prototypical early childhood program that targeted disadvantaged families. The program promoted different aspects of child development for different genders. There are differences in intergenerational educational attainment and employment. We account for control substitution. Males benefit more from high quality treatment in comparison to those who stay at home in disadvantaged environments. Females are less sensitive to low quality home environments. Although both genders benefit, females outperform males on many dimensions. Finally, we reconcile this analysis by concluding that the treatment compensated for early-life deficits that males experience relative to females. This compensation helps the males experience long-lasting benefits of the program into adulthood. \textbf{[Word Count: 116]} 
-
-\textbf{[JJH: Both programs contribute -- do we eliminate or increase the male-female gaps?][]} \\
-\textbf{[JJH: This is confusing -- what is being said? (a) How different are female controls from male controls? (b) Who benefits most in terms of value added?][Figure 1 now represents the difference between the males and controls and we have added some plots to demonstrate the value added. ]} 
-
-\textbf{We have printed the appendix for this paper.}
+\noindent This paper estimates the impacts across multiple life domains of an enriched early childhood program targeted toward disadvantaged children. Evaluated by the method of random assignment, treatments and controls were followed through age 34. There are multiple lifetime benefits of the program that differ sharply by gender. We document these differences and assess the impacts of the program on promoting or alleviating population differences in life outcomes by gender. Boys benefit more from high quality early center-based programs. For them, home care, even in disadvantaged environments, is more beneficial. This phenomenon is not found for girls. We investigate the sources of the differential impacts. Early childhood interventions differentially affect child-parent interactions depending on the gender of the child. \textbf{[Word Count: 118]}
