--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -29,7 +29,7 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables between experime
 \begin{threeparttable}
 	\input{output/abccare-baseline}
 \begin{tablenotes}
-\footnotesize 
+\footnotesize
 \item Note: The variables in this table are all measured at the baseline age, close to when the children were born. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
 \end{tablenotes}
 \end{threeparttable}
@@ -37,8 +37,10 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables between experime
 
 Figure~\ref{fig:family-over-time} complements Table~\ref{tab:abccare-baseline} by showing the evolution of the family characteristics during and after treatment, by gender. Conditional on the father being present at baseline, the his presence is fairly constant through age 8. The females in the treatment group have fewer present father than all the other groups.
 
+\textbf{[JJH: This goes in web appendix. Look at \underline{controls} outcomes: male vs female. Then treatment effects (value added). How much is the gap closed?]}
+
 \begin{figure}[H]
-\textbf{[JJH: Father Present?][Yes. Title is now changed.]}
+\textbf{[JJH: Father Present?][Yes. Title is now changed.] [JJH: Verbally summarize; too busy.]}
 \begin{center}
 \caption{Family Characteristics Over Time}
 \label{fig:family-over-time}
@@ -65,7 +67,7 @@ Randomization for ABC/CARE was conducted on child pairs matched on family backgr
 
 \subsection{Control Group Substitution}
 
-In ABC/CARE, many control-group subjects (but no treatment-group subjects) attended alternative center-based preschool.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE. This creates both a problem (substitution bias\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.}) and an opportunity (we can compare the effect of an enriched treatment vs. other alternative home and low quality environments).
+In ABC/CARE, many control-group subjects (but no treatment-group subjects) attended alternative center-based preschool.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE. This creates both a problem (substitution bias\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.}) and an opportunity (we can compare the effect of an enriched treatment vs. other alternative home and low quality environments). We discuss both.
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -86,11 +88,13 @@ Note: Panel (a) displays the cumulative distribution function of enrollment in a
 
 Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enroll generally stay enrolled. As control children age, they are more likely to enter childcare (see Appendix~\ref{app:control-subbb}).
 
-Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attended and who did not attend alternative preschools.}
+Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attended and who did not attend alternative preschools.} If a boy, father more likely present.
 
 While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low quality compared to ABC/CARE.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.}$^,$\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
 
 \subsection{Data Collection} \label{section:data-collection}
+
+\textbf{[JJH: Appendix.]}
 
 Data across a wide range of outcomes were collected for ABC and CARE at similar time points. Table~\ref{tab:abc-care-data} summarizes the data collection for both programs. A varied battery of measures of cognitive, social-emotional, and parenting skills were administered during the intervention and while the children were in school. Adult follow-ups are available at ages 21, 30, and 34, with administrative crime records and biomarker health data available at age 34.
 
@@ -102,7 +106,7 @@ Data across a wide range of outcomes were collected for ABC and CARE at similar 
 \footnotesize
 	\input{output/abc-care-variables}
 \begin{tablenotes}
-\footnotesize 
+\footnotesize
 \item Note: This table provides an abbreviated summary of the variables available in ABC and CARE. The cognitive and social-emotional categories listed are a subset of the full list of measured skills. Ages followed by m.\ are in months. All other ages are in years. Ages with an asterisk (*) are only present in ABC.
 %See Appendix~\ref{} for more information on the available measures of skills.
 \end{tablenotes}
