--- a/sections/5_treatment-effects.tex
+++ b/sections/5_treatment-effects.tex
@@ -4,6 +4,8 @@ Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present t
 
 The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on the estimate that we consider; college graduation increases 13 percentage points; and the average years of schooling increase between 2.1 and 1.8 years. Employment at age 30 increases between 13 and 8 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment with the option of staying at home.
 
+\textbf{[JJH: By category -- Report stepdown by blocks: health, earnings, crime, etc.]}
+
 \begin{sidewaystable}[!htbp]
 \centering
 \begin{threeparttable}
