--- a/sections/7_conclusion.tex
+++ b/sections/7_conclusion.tex
@@ -1,1 +1,3 @@
-We demonstrate that although ABC/CARE benefitted both genders, females experienced a larger number of positive (and significant) benefits. Females especially benefitted in comparison to those in the control group who attended alternative preschools. This speaks to other work that concludes males are more fragile earlier in life. However, we find that early-life, intensive early childhood education can compensate for this fragility in males and result in positive long-term outcomes.
+We demonstrate that although ABC/CARE benefitted both genders, females experienced a larger number of positive (and significant) benefits. Females especially benefitted in comparison to those in the control group who attended alternative preschools. This speaks to other work that concludes males are more fragile earlier in life. However, we find that early-life, intensive early childhood education can compensate for this fragility in males and result in positive long-term outcomes. 
+
+\textbf{[JJH: Attachment important.]}
