--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -48,7 +48,7 @@ The University of Chicago}
 \input{sections/0_abstract}
 \end{abstract}
 
-\noindent \textbf{Keywords}: Childcare, early childhood education, gender differences in responses to programs, health, long-term predictions, quality of life, randomized trials, substitution bias \\
+\noindent \textbf{Keywords}: Childcare, early childhood education, gender differences, health, long-term predictions, quality of life, randomized trials, substitution bias \\
 \noindent \textbf{JEL codes}: J13, I28, C93\\
 
 
@@ -85,11 +85,11 @@ Email: aziff@uchicago.edu                     &  \\
 \label{sec:introduction}
 \input{sections/1_introduction}	
 
-\section{Background and Data}
+\section{Our Data}
 \label{sec:data}
 \input{sections/2_data}
 
-\section{Parameters Estimated in This Paper}
+\section{Parameters Estimated}
 \label{sec:parameters}
 \input{sections/3_parameters}
 
