--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -2,7 +2,7 @@
 \input{preambleappendix}
 \input{output/mainstatistics}
 
-\externaldocument{abc_treatmenteffects_04-27-2017b_jbb}
+\externaldocument{abc_treatmenteffects}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
@@ -64,13 +64,5 @@
 \singlespacing
 \bibliography{heckman}
 \bibliographystyle{chicago}
-
-%\section{Details of ABC/CARE}
-%\label{app:program}
-%\input{appendices/program}	
-%
-%\section{Data}
-%\label{app:data}
-%\input{appendices/data}
 
 \end{document} 
