--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,48 +1,55 @@
-Differences in gender are well-known facts of economic and social life. This paper investigates how participation in enriched early childhood programs differentually enhances the lives of disadvantaged boys and girls, and whether they enhance or reduce gender gaps among the disadvantaged children.
+Differences in gender are well-known features of economic and social life. This paper investigates how participation in enriched early childhood programs differently enhances the lives of disadvantaged boys and girls, and whether they enhance or reduce gender gaps among disadvantaged children.
 
-There is a rich literature in psychology on the greater vulnerability of boys to adverse life conditions.\footnote{See \cite{Schore_2017_IMHJ} for an extensive survey. Economists have contributed to this literature. See, e.g., \cite{Autor-etal_2015_Family-Disadvantage}.} As a group, girls mature earlier, are more resilient to adversity, and perform better on a variety of lifetime measures. Less is known about effective strategies for reducing the vulnerability of boys to disadvantaged childhoods. This paper uses data from an influential, widely emulated, early childhood program to investigate these issues.
+There is a rich literature in psychology on the greater vulnerability of boys to adverse life conditions. As a group, girls mature earlier, are more resilient to adversity, and perform better on a variety of lifetime outcomes.\footnote{See \cite{Schore_2017_IMHJ} for an extensive survey. Economists have contributed to this literature. See, e.g., \cite{Autor-etal_2015_Family-Disadvantage}.} Less is known about effective strategies for reducing the vulnerability of boys to disadvantages. This paper investigating this questions using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The program is a template for many current and proposed early interventions. It starts at eight weeks of age and continues through age 5. Participants and controls are followed through age 34 with data collected at all stages of the life cycle.
 
-Specifically, we analyze data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The program is widely emulated and is a template for many current and proposed early interventions. The program starts at eight weeks of age and continues through age 5. Participants and controls are followed through age 34 with data collected at all stages of the life cycle.
+There are positive life cycle impacts of the program for both genders. However, there are substantial differences in impact by gender that vary by the domain studied. The program studied differentially promotes the earnings, employment and health of males and reduces their participation in crime. It differentially enhances the IQ, cognition and education of girls. We investigate the sources of these differences. Home care versus low quality center care on children by gender. Boys placed in low quality center environments do much worse than girls. This is consistent with a large body of work in psychology on vulnerability and the importance of early attachment on the lives of boys. Boys benefit relatively more from high quality center care than girls, although both genders benefit.
 
-We study the differential impact of the program by gender on a variety of life outcomes. There are positive impacts of the program for both genders, but there are also important substantial differences in impact by gender across the life cycle. We also study the impact of home care versus low quality center care on control group children by gender. Boys placed in low quality center environments do much worse than girls. This is consistent with a large body of work in psychology on the importance of early attachment on the lives of boys. Boys benefit more from high quality center care than girls, although both genders benefit.
+We analyze data from the Carolina Abecedarian Project (ABC) and its sister program, Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. We refer to the combined programs as ABC/CARE.
 
-The program we analyze, the Carolina Abecedarian Project (ABC) and its sister program, Carolina Approach to Responsive Education (CARE), were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. We refer to the combined programs as ABC/CARE.
+To preview of our analysis, we report gender differences of outcomes in Figure~\ref{fig:value-added}. \textbf{[JJH: Why these 3 outcomes? We need categories.]} We display the means for the full control group, restricting to the individuals who stayed at home, and restricting to those who attended alternative preschool. For early sociability, although females in the full control group have slightly higher scores, the males in the control group that stayed at home surpass the females by about 8 quantiles (out of 30 quantiles). These males even surpass the treatment-group males, which is why the value added of treatment is negative in this case. We also see this pattern in blood pressure with males who stayed at home outperforming the other groups. In years of education, we see that there is gap between males and females in the control groups, regardless of alternative setting. However, the treatment closes the gap between males and females. This shows that the treatment has the potential to close gaps between males and females, however it is moderated by the alternative setting, especially for the males.
 
-As a preview of our analysis, we report gender differences of outcomes in Figure~\ref{fig:intro-skills-plots-skills}. Females perform, on average, about five quantiles better than males on early measures of social-emotional skills.\footnote{This is consistent with previous work showing that females tend to outperform males on tests of skills \citep{Baker-Milligan_2013_Boy-Girl-Differences}.} There is a similar gender difference in the early measures of parenting, specifically the absence of punishment. Males receive more parental discipline than their female counterparts. Stark gender differences are not found for IQ or achievement measures.
-
-The gender differences for income and education in the adult years are not significantly different. Males have slightly higher levels of both. Health, represented by adult BMI, is worse for females by about five quantiles. The opposite is true for crime.\footnote{Crime costs are estimated in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.}
+\textbf{[JJH: Too narrowly focused -- why pick these 3? Need effect by category.]}
 
 \begin{figure}[!htbp]
-\textbf{[JJH: Why these measures?]}
+\textbf{[JJH: Why these measures?][We have changed these plots to show (a) the control-group gender differences and (b) the value added of treatment. We thought these measures were illustrative and showed interesting results.] [JJH: Figures way too busy. Crime, health, earnings, cognition, education.]}
 \centering
 \caption{Differences Between ABC/CARE Males and Females}
-\label{fig:intro-gdiff-plots}
-\begin{subfigure}[h]{0.59\textwidth}
+\label{fig:value-added}
+\begin{subfigure}[h]{0.495\textwidth}
 	\centering
-	\caption{Skill Measurements}
-	\label{fig:intro-skills-plots-skills}
-	\includegraphics[width=\textwidth]{output/abccare-gdiff-skills}
+	\caption{Early Sociability}
+	\label{fig:means-sociab}
+	\includegraphics[width=\textwidth]{output/control-50a-sociabe}
 \end{subfigure}
 
-\begin{subfigure}[h]{0.59\textwidth}
+\begin{subfigure}[h]{0.495\textwidth}
 	\centering
-	\caption{Adult Outcomes}
-	\label{fig:intro-skills-plots-adultsimp}
-	\includegraphics[width=\textwidth]{output/abccare-gdiff-adultsimp}
+	\caption{Years of Education}
+	\label{fig:means-years}
+	\includegraphics[width=\textwidth]{output/control-50a-years_30y}
+\end{subfigure} %
+\begin{subfigure}[h]{0.495\textwidth}
+	\centering
+	\caption{Blood Pressure}
+	\label{fig:means-bp}
+	\includegraphics[width=\textwidth]{output/control-50a-bp}
 \end{subfigure}
+
 \footnotesize \justify
-Note: These plots show the means of select variables by gender for the control group. The capped lines show the standard errors and black points indicate that the female is significantly different than the males. These hypothesis tests are two-sided and computed using 100 bootstraps. All factor variables are calculated by principal factor analysis. The factors are then standardized and divided into 30 quantiles. Panel (a) Social-emotional is a factor of task-orientation measured by the Infant Behavioral Record (IBR; \citet{Bayley_1969_BSID-Manual}) at ages 0.5, 1, 1.5 years. Parenting is a factor of the absence of punishment scale of Home Observation for Measurement of the Environment (HOME; \citet{Elardo_Bradley_1981_DR}) between ages 0.5 and 4.5 years. IQ is a factor of full IQ scores measured by the Stanford-Binet Intelligence Scale (SB; \citet{Terman_Merrill_1960_BOOKSBintelligence}), McCarthy Scales of Children's Abilities (MC; \citet{McCarthy_1972_Manual-McCarthy-Scales}), and the Wechsler Preschool and Primary Scale of Intelligence (WPPSI; \citet{Wechsler_1974_Manual-WISC-R}) at ages 2, 3, 4, and 5 years. Achievement is a factor of reading and math scores measured by between the ages of 6 and 12 years. Panel (b) Income is the lifetime net present value of income predicted in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. Education is an indicator of high school graduation by 21 years. Heath is BMI measured at approximately 35 years. Crime is the net present value of projected crime costs as estimated in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. All of these adult variables are standardized and split into quantiles to be consistent with the skills.
+Note: These plots show the means of select variables by gender for the full control group, the control group that attended alternative preschool, and the control group that stayed at home. The value added of treatment is shown with the colored bars with the blue bars indicating a positive value added and the purple bars indicating a negative one. Shaded bars indicate a significant treatment effect. These hypothesis tests are two-sided and computed using 50 bootstraps. All factor variables are calculated by principal factor analysis. The factors are then standardized and divided into 30 quantiles. Panel (a) Social-emotional is a factor of task-orientation measured by the Infant Behavioral Record (IBR; \citet{Bayley_1969_BSID-Manual}) at ages 0.5, 1, 1.5 years. Panel (b) is the years of education measured at age 30 standardized and split into 30 quantiles. Panel (c) is a factor of systolic and diastolic blood pressure measured approximately at age 35.
 \end{figure}
 
-Although these mean differences do not include the effect of early childhood education on improving these skills, many studies have shown the potential for early-life interventions to improve the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Several of these studies separate analysis by gender and find that males and females benefit differently from early childhood education. For example, \citet{Heckman_Moon_etal_2010_QE} and \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, analyze randomized controllled trials with long-term data follow-ups, find that intervening early in life more positively affects education for females and labor market and health outcomes for males. Other studies analyzing programs with shorter-term data also find gender differences in early skills and academic outcomes.\footnote{\citet{Deming_2009_AEJAE,Ou_Reynolds_2010_Mechanisms_CYSR,Magnuson_Kelchen_Duncan_etal_2016_ECRQ}.}
+Many studies have shown the potential for early-life interventions to improve the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Several of these studies separate analysis by gender and find that males and females benefit differently from early childhood education. For example, \citet{Heckman_Moon_etal_2010_QE} and \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, analyze randomized controllled trials with long-term data follow-ups, find that intervening early in life more positively affects education for females and labor market and health outcomes for males. Other studies analyzing programs with shorter-term data also find gender differences in early skills and academic outcomes.\footnote{\citet{Deming_2009_AEJAE,Ou_Reynolds_2010_Mechanisms_CYSR,Magnuson_Kelchen_Duncan_etal_2016_ECRQ}.}
 
-This paper studies the treatment effects of ABC/CARE by gender. We report standard treatment effects comparing the treatment and control group. This considers the treatment effect given that the control-group families select the ``next best'' early childhood option for their children. This option can include staying at home or attending other center-based care.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although these alternate centers followed state and federal standards, they were of lower quality than the ABC/CARE intervention.}
+This paper studies the treatment effects of ABC/CARE by gender. We report standard treatment effects comparing the treatment and control group. This considers the treatment effect given that the control-group families select the ``next best'' early childhood option for their children. \textbf{[JJH: No, we also study by alt.]} This option can include staying at home or attending other center-based care.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although these alternate centers followed state and federal standards, they were of lower quality than the ABC/CARE intervention.}
+
+\textbf{[JJH: High quality vs low quality center. High quality vs home.]}
 
 Unlike previous studies analyzing ABC/CARE, we additionally compute treatment effects comparing the treatment group to the control group fixing those in the control group to these two alternate counterfactuals.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE, Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.}$^,$\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE} for work related to control substitution.}
 
-We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:results}. \textbf{[JJH: These should go in text.][This sentence was moved from the footnote to the main text.]} Given the large number of available variables from the numerous follow-ups, summarizing all treatment effects can overwhelm the reader. In a companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} aggregate the treatment effects by conducting a cost/benefit analysis. They show that the benefits from ABC/CARE are largely driven by its effects on males. The benefit/cost ratio is 10.19 for males and 2.61 for females. In this paper, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males.
+We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:results}. \textbf{[JJH: These should go in text.][This sentence was moved from the footnote to the main text.] [JJH: We need to summarize these.]} Given the large number of available variables from the numerous follow-ups, summarizing \textbf{[JJH: Effects by category.]} all treatment effects can overwhelm the reader. In a companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} aggregate the treatment effects by conducting a cost/benefit analysis. They show that the benefits from ABC/CARE are largely driven by its effects on males. The benefit/cost ratio is 10.19 for males and 2.61 for females. In this paper, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males.
 
-We find strong effects on education and employment for females with high school graduation increasing between 13 and 25 percent and employment increasing between 8 and 13 percentage points.\footnote{The range arrises from the different estimates.} Although the treatment did not increase education for males as strongly as for females, it increased employment between 11 to 19 percentage points and labor income between 19 and 24 thousand of 2014 US dollars.\footnote{Income, employment, and education were measured when the subjects were 30 years.}
+We find strong effects on education and employment for females with high school graduation increasing between 13 and 25 percent and employment increasing between 8 and 13 percentage points.\footnote{The range arrises from the different estimates.} Although the treatment did not increase education for males as strongly as for females, it increased employment between 11 to 19 percentage points and labor income between 19 and 24 thousand of 2014 US dollars.\footnote{Income, employment, and education were measured when the subjects were 30 years.} \textbf{[JJH: List by category.]}
 
 We broaden the discussion of results to the full set of outcomes by presenting the estimates of the counts of positive treatment effects. To perform inference on these estimates, we test the hypothesis of whether the proportions are equal to 50\%. As Figure~\ref{fig:intro-cfunctions} shows, although the proportions for both genders are significantly greater than 50\%, the proportion is higher for females. When considering the proportion of outcomes that are both positive and significant at the 10\% level, we test the hypothesis whether the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions}.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males fixing the control group to alternate preschool, but stronger for females when fixing the control group to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the results from \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
 
@@ -78,6 +85,8 @@ The paper proceeds as follows. We describe ABC/CARE in more detail in Section~\r
 \item \textbf{Comparison of control children---are girls doing better or worse?/also report moderators]}
 \end{enumerate}
 
-\textbf{[We have included plots and discussion getting at these points. Please see Figures.]}
+\textbf{[We have included plots and discussion getting at these points and will update them further by tomorrow.]}
+
+\textbf{[JJH: Previous research on gender differences.]}
 
 %ee \citet{Beeghly-etal_2017_IMHJ,Dayton_2017_IMHJ,Iruka_2017_IMHJ,Schore_2017_IMHJ} for recent findings on the topic of different development of males and females early in life. 
