new tables with controls

--- a/output/abccare-var-ach.tex
+++ b/output/abccare-var-ach.tex
@@ -2,12 +2,12 @@
 \toprule
 \textbf{Variable} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
 \midrule
-\texttt{\detokenize{read5y6m}} & 99.422 & 1.609 &  103.493 & 2.004 & 0.100 \\
+\texttt{\detokenize{read5y6m}} & \textbf{99.422} & 1.609 &  \textbf{103.493} & 2.004 & 0.100 \\
 \texttt{\detokenize{math5y6m}} & 93.534 & 1.404 &  96.574 & 1.897 & 0.200 \\
 \texttt{\detokenize{know5y6m}} & 97.069 & 1.447 &  95.745 & 1.667 & 0.900 \\
-\texttt{\detokenize{read6y}} & 100.326 & 1.041 &  103.260 & 1.353 & 0.000 \\
+\texttt{\detokenize{read6y}} & \textbf{100.326} & 1.041 &  \textbf{103.260} & 1.353 & 0.000 \\
 \texttt{\detokenize{math6y}} & 96.485 & 1.429 &  97.458 & 1.727 & 0.500 \\
-\texttt{\detokenize{know6y}} & 98.333 & 1.412 &  96.288 & 1.493 & 0.100 \\
+\texttt{\detokenize{know6y}} & \textbf{98.333} & 1.412 &  \textbf{96.288} & 1.493 & 0.100 \\
 \texttt{\detokenize{read7y6m}} & 88.431 & 1.479 &  88.589 & 1.885 & 0.900 \\
 \texttt{\detokenize{math7y6m}} & 89.046 & 1.398 &  87.821 & 1.599 & 0.500 \\
 \texttt{\detokenize{know7y6m}} & 97.500 & 2.617 &  95.615 & 2.879 & 0.700 \\
@@ -25,7 +25,7 @@
 \texttt{\detokenize{know12y}} & 93.143 & 1.499 &  89.641 & 1.681 & 0.200 \\
 \texttt{\detokenize{read21y}} & 89.804 & 2.106 &  91.151 & 2.162 & 0.900 \\
 \texttt{\detokenize{math21y}} & 87.667 & 1.569 &  86.057 & 1.637 & 0.400 \\
-\texttt{\detokenize{cat_readst8y}} & 95.093 & 1.492 &  98.550 & 2.079 & 0.100 \\
+\texttt{\detokenize{cat_readst8y}} & \textbf{95.093} & 1.492 &  \textbf{98.550} & 2.079 & 0.100 \\
 \texttt{\detokenize{cat_mathst8y}} & 102.395 & 2.150 &  102.390 & 2.079 & 1.000 \\
 \texttt{\detokenize{wj_read7y6m}} & 88.431 & 1.479 &  88.589 & 1.885 & 1.000 \\
 \texttt{\detokenize{wj_math7y6m}} & 89.046 & 1.398 &  87.821 & 1.599 & 0.600 \\
