--- a/output/abccare-var-socioemo.tex
+++ b/output/abccare-var-socioemo.tex
@@ -4,32 +4,32 @@
 \midrule
 \texttt{\detokenize{ibr_task0y6m}} & 19.803 & 0.510 &  19.466 & 0.478 & 0.700 \\
 \texttt{\detokenize{ibr_task1y}} & 21.712 & 0.378 &  21.000 & 0.427 & 0.300 \\
-\texttt{\detokenize{ibr_task1y6m}} & 21.542 & 0.502 &  22.366 & 0.457 & 0.000 \\
+\texttt{\detokenize{ibr_task1y6m}} & \textbf{21.542} & 0.502 &  \textbf{22.366} & 0.457 & 0.000 \\
 \texttt{\detokenize{ibr_task2y}} & 22.381 & 0.481 &  22.490 & 0.522 & 0.800 \\
-\texttt{\detokenize{ibr_actv0y6m}} & 12.373 & 0.363 &  11.603 & 0.370 & 0.100 \\
+\texttt{\detokenize{ibr_actv0y6m}} & \textbf{12.373} & 0.363 &  \textbf{11.603} & 0.370 & 0.100 \\
 \texttt{\detokenize{ibr_actv1y}} & 13.378 & 0.364 &  13.458 & 0.462 & 0.800 \\
 \texttt{\detokenize{ibr_actv1y6m}} & 14.736 & 0.421 &  15.085 & 0.435 & 0.700 \\
 \texttt{\detokenize{ibr_actv2y}} & 14.532 & 0.561 &  14.880 & 0.535 & 0.600 \\
 \texttt{\detokenize{ibr_sociab0y6m}} & 10.171 & 0.168 &  10.384 & 0.160 & 0.400 \\
-\texttt{\detokenize{ibr_sociab1y}} & 10.541 & 0.163 &  11.438 & 0.150 & 0.000 \\
-\texttt{\detokenize{ibr_sociab1y6m}} & 10.789 & 0.196 &  11.614 & 0.205 & 0.000 \\
-\texttt{\detokenize{ibr_sociab2y}} & 10.268 & 0.277 &  11.057 & 0.221 & 0.000 \\
+\texttt{\detokenize{ibr_sociab1y}} & \textbf{10.541} & 0.163 &  \textbf{11.438} & 0.150 & 0.000 \\
+\texttt{\detokenize{ibr_sociab1y6m}} & \textbf{10.789} & 0.196 &  \textbf{11.614} & 0.205 & 0.000 \\
+\texttt{\detokenize{ibr_sociab2y}} & \textbf{10.268} & 0.277 &  \textbf{11.057} & 0.221 & 0.000 \\
 \texttt{\detokenize{new_kr_dst2y}} & 3.881 & 0.099 &  3.781 & 0.137 & 0.500 \\
 \texttt{\detokenize{kr_att2y}} & 3.294 & 0.115 &  3.380 & 0.143 & 0.200 \\
 \texttt{\detokenize{new_kr_withd2y}} & 4.780 & 0.116 &  4.908 & 0.113 & 0.200 \\
 \texttt{\detokenize{kr_conf2y}} & 3.643 & 0.112 &  3.735 & 0.124 & 0.500 \\
 \texttt{\detokenize{new_cbi_iv5y6m}} & 11.516 & 0.307 &  11.737 & 0.343 & 0.800 \\
 \texttt{\detokenize{new_cbi_di5y6m}} & 9.274 & 0.312 &  8.860 & 0.342 & 0.400 \\
-\texttt{\detokenize{new_cbi_de5y6m}} & 11.645 & 0.292 &  10.789 & 0.312 & 0.000 \\
+\texttt{\detokenize{new_cbi_de5y6m}} & \textbf{11.645} & 0.292 &  \textbf{10.789} & 0.312 & 0.000 \\
 \texttt{\detokenize{cbi_ex5y6m}} & 18.161 & 0.488 &  18.895 & 0.416 & 0.500 \\
 \texttt{\detokenize{cbi_cr5y6m}} & 15.311 & 0.451 &  15.614 & 0.521 & 0.900 \\
 \texttt{\detokenize{cbi_ve5y6m}} & 13.823 & 0.434 &  14.193 & 0.586 & 0.400 \\
 \texttt{\detokenize{cbi_ta5y6m}} & 15.710 & 0.583 &  15.509 & 0.604 & 0.800 \\
 \texttt{\detokenize{cbi_co5y6m}} & 17.016 & 0.514 &  17.411 & 0.560 & 0.600 \\
-\texttt{\detokenize{new_wlkr_act8y}} & 18.106 & 0.873 &  22.000 & 0.862 & 0.000 \\
+\texttt{\detokenize{new_wlkr_act8y}} & \textbf{18.106} & 0.873 &  \textbf{22.000} & 0.862 & 0.000 \\
 \texttt{\detokenize{new_wlkr_withd8y}} & 13.106 & 0.242 &  13.267 & 0.261 & 0.500 \\
-\texttt{\detokenize{new_wlkr_dst8y}} & 8.515 & 0.436 &  10.711 & 0.497 & 0.000 \\
-\texttt{\detokenize{new_wlkr_peer8y}} & 22.788 & 0.364 &  23.822 & 0.396 & 0.100 \\
+\texttt{\detokenize{new_wlkr_dst8y}} & \textbf{8.515} & 0.436 &  \textbf{10.711} & 0.497 & 0.000 \\
+\texttt{\detokenize{new_wlkr_peer8y}} & \textbf{22.788} & 0.364 &  \textbf{23.822} & 0.396 & 0.100 \\
 \texttt{\detokenize{new_wlkr_immt8y}} & 17.303 & 0.334 &  17.378 & 0.464 & 0.900 \\
 \texttt{\detokenize{new_cbi_ho12y}} & 9.406 & 0.672 &  10.333 & 0.485 & 0.200 \\
 \texttt{\detokenize{new_cbi_de12y}} & 11.226 & 0.461 &  11.056 & 0.486 & 0.700 \\
@@ -38,22 +38,22 @@
 \texttt{\detokenize{cbi_ex12y}} & 17.812 & 0.782 &  17.667 & 0.664 & 0.900 \\
 \texttt{\detokenize{cbi_cr12y}} & 12.844 & 0.669 &  13.111 & 0.630 & 0.700 \\
 \texttt{\detokenize{cbi_ve12y}} & 11.281 & 0.635 &  12.111 & 0.618 & 0.300 \\
-\texttt{\detokenize{cbi_ta12y}} & 12.188 & 1.002 &  13.389 & 0.788 & 0.000 \\
+\texttt{\detokenize{cbi_ta12y}} & \textbf{12.188} & 1.002 &  \textbf{13.389} & 0.788 & 0.000 \\
 \texttt{\detokenize{cbi_co12y}} & 16.161 & 0.986 &  16.389 & 0.762 & 0.900 \\
 \texttt{\detokenize{new_kr_dst7y}} & 4.701 & 0.099 &  4.684 & 0.108 & 0.800 \\
-\texttt{\detokenize{kr_att7y}} & 4.580 & 0.114 &  4.729 & 0.131 & 0.100 \\
+\texttt{\detokenize{kr_att7y}} & \textbf{4.580} & 0.114 &  \textbf{4.729} & 0.131 & 0.100 \\
 \texttt{\detokenize{new_kr_withd7y}} & 4.970 & 0.061 &  5.069 & 0.076 & 0.500 \\
 \texttt{\detokenize{kr_conf7y}} & 4.884 & 0.086 &  4.955 & 0.090 & 0.900 \\
-\texttt{\detokenize{new_easy_gen}} & 14.422 & 0.470 &  13.737 & 0.540 & 0.100 \\
+\texttt{\detokenize{new_easy_gen}} & \textbf{14.422} & 0.470 &  \textbf{13.737} & 0.540 & 0.100 \\
 \texttt{\detokenize{new_easy_fear}} & 15.797 & 0.517 &  15.526 & 0.476 & 0.400 \\
 \texttt{\detokenize{new_easy_ang}} & 14.812 & 0.472 &  15.123 & 0.555 & 0.600 \\
-\texttt{\detokenize{new_easy_temp}} & 12.453 & 0.522 &  13.684 & 0.587 & 0.000 \\
+\texttt{\detokenize{new_easy_temp}} & \textbf{12.453} & 0.522 &  \textbf{13.684} & 0.587 & 0.000 \\
 \texttt{\detokenize{new_easy_vig}} & 11.500 & 0.444 &  11.632 & 0.467 & 1.000 \\
 \texttt{\detokenize{new_easy_cont}} & 18.312 & 0.377 &  18.684 & 0.461 & 0.400 \\
 \texttt{\detokenize{new_easy_deci}} & 15.016 & 0.380 &  14.754 & 0.398 & 0.700 \\
 \texttt{\detokenize{new_easy_sens}} & 13.406 & 0.365 &  14.140 & 0.470 & 0.200 \\
 \texttt{\detokenize{new_easy_pers}} & 16.766 & 0.443 &  16.509 & 0.431 & 0.600 \\
-\texttt{\detokenize{easy_soci}} & 19.109 & 0.381 &  19.947 & 0.359 & 0.000 \\
+\texttt{\detokenize{easy_soci}} & \textbf{19.109} & 0.381 &  \textbf{19.947} & 0.359 & 0.000 \\
 \bottomrule
 \end{longtable}
 % This file generated by: /scripts/abccare/genderdifferences/abccare-tables.do
